# python-soql-parser

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
python_soql_parser/: __init__.py  binops.py  core.py  parse.py  tokens.py
tests/: test_python_soql_parser.py
