[tool.poetry]
name = "python-soql-parser"
version = "0.1.11"
description = "A pyparsing-based library for parsing SOQL statements"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kicksaw-Consulting/python-soql-parser"
authors = ["Alex Drozd <drozdster@gmail.com>"]
keywords = ["python", "soql", "pyparsing", "parsing", "salesforce"]
packages = [
    { include = "python_soql_parser" }
]

[tool.poetry.dependencies]
python = "^3.8"
pyparsing = "^2.4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
