[tool.poetry]
name = "python-soql-parser"
version = "0.2.0"
description = "A pyparsing-based library for parsing SOQL statements"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kicksaw-Consulting/python-soql-parser"
authors = ["Alex Drozd <drozdster@gmail.com>"]
keywords = ["python", "soql", "pyparsing", "parsing", "salesforce"]
packages = [
    { include = "python_soql_parser" }
]

[tool.poetry.dependencies]
python = "^3.10.0"
pyparsing = "^2.4.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^20.8b1"
isort = "^5.8.0"
pylint = "^3.0.3"
flake8 = "^7.0.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
